--- a/AI-engine/config_mitie.json
+++ b/AI-engine/config_mitie.json
@@ -3,6 +3,6 @@
   "mitie_file": "data/total_word_feature_extractor.dat",
   "path" : "./",
   "data" : "data/sitebot-data.json",
-  "num_threads":100
+  "num_threads":100,
   "pipeline": "mitie"
 }
