--- a/AI-engine/config_spacy.json
+++ b/AI-engine/config_spacy.json
@@ -2,5 +2,6 @@
   "backend": "spacy_sklearn",
   "path" : "./",
   "data" : "data/sitebot-data.json",
-  "num_threads":100
+  "num_threads":100,
+  "pipeline":"spacy_sklearn"
 }
